--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/app": "^0.11.1",
     "@tailwindcss/vite": "^4.0.3",
     "@tanstack/react-table": "^8.20.6",
     "cloudflare": "^4.0.0",
