--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "generate-meta-tag": "node ./node_modules/react-cache-buster/dist/generate-meta-tag.js",
+    "build": "yarn generate-meta-tag && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -18,6 +19,7 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-cache-buster": "^0.1.8",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.5",
     "tailwindcss": "^4.0.3",
