--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.3.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.474.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-cache-buster": "^0.1.8",
     "react-dom": "^18.3.1",
